# rakka

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PORTING.md  PORTING_TODO.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
benches/ping_throughput/: Cargo.toml
benches/ping_throughput/benches/: ping_throughput.rs
benches/ping_throughput/src/: lib.rs
crates/atomr-cluster/: Cargo.toml
crates/atomr-cluster-metrics/: Cargo.toml
crates/atomr-cluster-metrics/src/: lib.rs
crates/atomr-cluster-sharding/: Cargo.toml
crates/atomr-cluster-sharding/src/: allocation.rs  coordinator.rs  ddata_coordinator.rs  entity_ref.rs  extractor.rs  handoff.rs  lib.rs  passivation.rs  persistent_coordinator.rs  rebalance.rs  remember_entities.rs  shard.rs  shard_region.rs
crates/atomr-cluster-sharding/tests/: sharding_specs.rs
crates/atomr-cluster-tools/: Cargo.toml
crates/atomr-cluster-tools/src/: cluster_client.rs  cluster_singleton.rs  lib.rs  pub_sub.rs
crates/atomr-cluster-tools/tests/: cluster_client_spec.rs  cluster_singleton_spec.rs  pubsub_multinode.rs  pubsub_specs.rs
crates/atomr-cluster/src/: cluster_daemon.rs  events.rs  gossip.rs  gossip_pdu.rs  heartbeat.rs  heartbeat_sender.rs  leader.rs  lib.rs  member.rs  membership.rs  multi_dc.rs  reachability.rs  remote_adapter.rs  sbr.rs  sbr_runtime.rs  transport.rs  vector_clock.rs
crates/atomr-cluster/tests/: cluster_event_spec.rs  cluster_multinode.rs  gossip_spec.rs  heartbeat_spec.rs  member_ordering_spec.rs  membership_state_spec.rs  reachability_spec.rs  sbr_strategy_spec.rs  vector_clock_spec.rs
crates/atomr-dashboard/: Cargo.toml
crates/atomr-dashboard/src/: aggregator.rs  exporters.rs  lib.rs  spa.rs  ws.rs
crates/atomr-dashboard/tests/: aggregator_integration.rs  http_handlers.rs  metrics_prometheus.rs  ws_multiplex.rs
crates/atomr-dashboard/ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
crates/atomr-di/: Cargo.toml
crates/atomr-di/src/: lib.rs
crates/atomr-di/tests/: service_container_spec.rs
crates/atomr-discovery/: Cargo.toml
crates/atomr-discovery/src/: lib.rs
crates/atomr-distributed-data/: Cargo.toml
crates/atomr-distributed-data-lmdb/: Cargo.toml
crates/atomr-distributed-data-lmdb/src/: lib.rs
crates/atomr-distributed-data/src/: counters.rs  durable.rs  flag.rs  lib.rs  maps.rs  pruning.rs  register.rs  replicator.rs  replicator_actor.rs  sets.rs  traits.rs
crates/atomr-distributed-data/tests/: crdt_laws_spec.rs  maps_spec.rs  replicator_actor_multinode.rs  replicator_subscribe_spec.rs  replicator_three_node_spec.rs
crates/atomr-hosting/: Cargo.toml
crates/atomr-hosting/src/: lib.rs
crates/atomr-hosting/tests/: hosting_spec.rs
crates/atomr-macros/: Cargo.toml
crates/atomr-macros/src/: lib.rs
crates/atomr-macros/tests/: actor_msg.rs  derive_actor.rs  derive_receive.rs  props_macro.rs
crates/atomr-patterns/: Cargo.toml
crates/atomr-patterns/src/: error.rs  extensions.rs  lib.rs  prelude.rs  topology.rs
crates/atomr-patterns/tests/: acl_translate.rs  cluster_distribution.rs  cqrs_counter.rs  cqrs_sharded.rs  cqrs_snapshot_recovery.rs  cqrs_with_extensions.rs  dedupe.rs  event_upcasting.rs  inbox.rs  optimistic_concurrency.rs  outbox_durable_offsets.rs  outbox_publish.rs  process_manager.rs  projection_rebuild.rs  reactor.rs  reader_live_tail.rs  saga_money_transfer.rs  saga_state_persistence.rs  specification.rs
crates/atomr-persistence/: Cargo.toml
crates/atomr-persistence-aws/: Cargo.toml
crates/atomr-persistence-aws/src/: config.rs  journal.rs  lib.rs  schema.rs  snapshot.rs
crates/atomr-persistence-aws/tests/: tck.rs
crates/atomr-persistence-cassandra/: Cargo.toml
crates/atomr-persistence-cassandra/src/: config.rs  journal.rs  lib.rs  schema.rs  snapshot.rs
crates/atomr-persistence-cassandra/tests/: tck.rs
crates/atomr-persistence-mongodb/: Cargo.toml
crates/atomr-persistence-mongodb/src/: config.rs  documents.rs  journal.rs  lib.rs  snapshot.rs
crates/atomr-persistence-mongodb/tests/: tck.rs
crates/atomr-persistence-query/: Cargo.toml
crates/atomr-persistence-query-inmemory/: Cargo.toml
crates/atomr-persistence-query-inmemory/src/: lib.rs
crates/atomr-persistence-query/src/: lib.rs
crates/atomr-persistence-query/tests/: envelope_spec.rs
crates/atomr-persistence-redis/: Cargo.toml
crates/atomr-persistence-redis/src/: codec.rs  config.rs  journal.rs  lib.rs  snapshot.rs
crates/atomr-persistence-redis/tests/: tck.rs
crates/atomr-persistence-sql/: Cargo.toml
crates/atomr-persistence-sql/src/: config.rs  journal.rs  lib.rs  query.rs  schema.rs  snapshot.rs
crates/atomr-persistence-sql/tests/: tck.rs
crates/atomr-persistence-tck/: Cargo.toml
crates/atomr-persistence-tck/src/: journal_suite.rs  lib.rs  snapshot_suite.rs
crates/atomr-persistence/src/: alod.rs  async_snapshot.rs  eventsourced.rs  journal.rs  lib.rs  persistent_actor.rs  persistent_fsm.rs  receive_persistent.rs  recovery.rs  recovery_permitter.rs  snapshot.rs
crates/atomr-persistence/tests/: alod_spec.rs  eventsourced_spec.rs  persistent_fsm_spec.rs  snapshot_retention_spec.rs
crates/atomr-profiler/: Cargo.toml
crates/atomr-profiler/src/: lib.rs  metrics.rs  report.rs  scenarios.rs
crates/atomr-remote/: Cargo.toml
crates/atomr-remote-serial/: Cargo.toml
crates/atomr-remote-serial/src/: lib.rs  reconnect.rs  transport.rs
crates/atomr-remote-serial/tests/: loopback.rs  reconnect_supervisor.rs  two_process.rs
crates/atomr-remote/src/: acked_delivery.rs  address_uid.rs  cache.rs  chunking.rs  codec.rs  deadline_detector.rs  endpoint_manager.rs  envelope.rs  failure_detector.rs  failure_detector_registry.rs  lib.rs  metrics.rs  pdu.rs  phi_accrual.rs  provider.rs  reader_writer.rs  remote_props.rs  remote_ref.rs  remote_watcher.rs  router.rs  settings.rs  system.rs  system_daemon.rs  tls.rs
crates/atomr-remote/tests/: endpoint_state_spec.rs  failure_detector_spec.rs  (+2 more)
crates/atomr-serialization-hyperion/: Cargo.toml
crates/atomr-streams/: Cargo.toml
crates/atomr-telemetry/: Cargo.toml
(+1013 files in other folders)
