[workspace]
resolver = "2"
members = [
    "crates/rustakka",
    "crates/rustakka-core",
    "crates/rustakka-config",
    "crates/rustakka-macros",
    "crates/rustakka-testkit",
    "crates/rustakka-remote",
    "crates/rustakka-cluster",
    "crates/rustakka-cluster-tools",
    "crates/rustakka-cluster-sharding",
    "crates/rustakka-cluster-metrics",
    "crates/rustakka-distributed-data",
    "crates/rustakka-persistence",
    "crates/rustakka-persistence-query",
    "crates/rustakka-persistence-tck",
    "crates/rustakka-persistence-query-inmemory",
    "crates/rustakka-streams",
    "crates/rustakka-coordination",
    "crates/rustakka-discovery",
    "crates/rustakka-di",
    "crates/rustakka-hosting",
    "crates/rustakka-serialization-hyperion",
    "xtask",
    "examples/pingpong",
    "examples/chat",
    "examples/fault-tolerance",
    "benches/ping_throughput",
    "crates/rustakka-profiler",
    "crates/py-bindings/pycore",
    "crates/py-bindings/pytestkit",
    "crates/py-bindings/pyremote",
    "crates/py-bindings/pycluster",
    "crates/py-bindings/pycluster-tools",
    "crates/py-bindings/pycluster-sharding",
    "crates/py-bindings/pyddata",
    "crates/py-bindings/pypersistence",
    "crates/py-bindings/pystreams",
    "crates/py-bindings/pycoordination",
    "crates/py-bindings/pydiscovery",
    "crates/py-bindings/pydi",
    "crates/py-bindings/pyhosting",
]
exclude = ["akka.net"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
repository = "https://github.com/local/rustakka"
authors = ["rustakka contributors"]

[workspace.dependencies]
# Async / runtime
tokio = { version = "1.39", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Concurrency primitives
dashmap = "6"
parking_lot = "0.12"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
flume = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bytes = "1"

# Protobuf (remote)
prost = "0.13"
prost-build = "0.13"

# Config
config = { version = "0.14", default-features = false, features = ["toml", "json", "yaml"] }
toml = "0.8"

# Error / utility
thiserror = "1"
anyhow = "1"
once_cell = "1"

# Testing
proptest = "1"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

# Macros
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

# Python bindings
pyo3 = { version = "0.22", default-features = false }
pyo3-async-runtimes = { version = "0.22", default-features = false, features = ["tokio-runtime"] }

# UUID / time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Internal
rustakka-core = { path = "crates/rustakka-core", version = "0.1.0" }
rustakka-config = { path = "crates/rustakka-config", version = "0.1.0" }
rustakka-macros = { path = "crates/rustakka-macros", version = "0.1.0" }
rustakka-testkit = { path = "crates/rustakka-testkit", version = "0.1.0" }
rustakka-remote = { path = "crates/rustakka-remote", version = "0.1.0" }
rustakka-cluster = { path = "crates/rustakka-cluster", version = "0.1.0" }
rustakka-cluster-tools = { path = "crates/rustakka-cluster-tools", version = "0.1.0" }
rustakka-cluster-sharding = { path = "crates/rustakka-cluster-sharding", version = "0.1.0" }
rustakka-cluster-metrics = { path = "crates/rustakka-cluster-metrics", version = "0.1.0" }
rustakka-distributed-data = { path = "crates/rustakka-distributed-data", version = "0.1.0" }
rustakka-persistence = { path = "crates/rustakka-persistence", version = "0.1.0" }
rustakka-persistence-query = { path = "crates/rustakka-persistence-query", version = "0.1.0" }
rustakka-persistence-query-inmemory = { path = "crates/rustakka-persistence-query-inmemory", version = "0.1.0" }
rustakka-persistence-tck = { path = "crates/rustakka-persistence-tck", version = "0.1.0" }
rustakka-streams = { path = "crates/rustakka-streams", version = "0.1.0" }
rustakka-coordination = { path = "crates/rustakka-coordination", version = "0.1.0" }
rustakka-discovery = { path = "crates/rustakka-discovery", version = "0.1.0" }
rustakka-di = { path = "crates/rustakka-di", version = "0.1.0" }
rustakka-hosting = { path = "crates/rustakka-hosting", version = "0.1.0" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
