[workspace]
resolver = "2"
members = [
    "crates/rakka",
    "crates/rakka-core",
    "crates/rakka-config",
    "crates/rakka-macros",
    "crates/rakka-testkit",
    "crates/rakka-remote",
    "crates/rakka-cluster",
    "crates/rakka-cluster-tools",
    "crates/rakka-cluster-sharding",
    "crates/rakka-cluster-metrics",
    "crates/rakka-distributed-data",
    "crates/rakka-persistence",
    "crates/rakka-persistence-query",
    "crates/rakka-persistence-tck",
    "crates/rakka-persistence-query-inmemory",
    "crates/rakka-persistence-sql",
    "crates/rakka-persistence-redis",
    "crates/rakka-persistence-mongodb",
    "crates/rakka-persistence-cassandra",
    "crates/rakka-persistence-aws",
    "crates/rakka-persistence-azure",
    "crates/rakka-streams",
    "crates/rakka-telemetry",
    "crates/rakka-dashboard",
    "crates/rakka-coordination",
    "crates/rakka-discovery",
    "crates/rakka-di",
    "crates/rakka-hosting",
    "crates/rakka-serialization-hyperion",
    "xtask",
    "examples/pingpong",
    "examples/chat",
    "examples/fault-tolerance",
    "examples/event-sourced-counter",
    "examples/cluster-pubsub-chat",
    "benches/ping_throughput",
    "crates/rakka-profiler",
    "crates/py-bindings/pycore",
    "crates/py-bindings/pytestkit",
    "crates/py-bindings/pyremote",
    "crates/py-bindings/pycluster",
    "crates/py-bindings/pycluster-tools",
    "crates/py-bindings/pycluster-sharding",
    "crates/py-bindings/pyddata",
    "crates/py-bindings/pypersistence",
    "crates/py-bindings/pystreams",
    "crates/py-bindings/pycoordination",
    "crates/py-bindings/pydiscovery",
    "crates/py-bindings/pydi",
    "crates/py-bindings/pyhosting",
]
exclude = ["akka.net"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
repository = "https://github.com/local/rakka"
authors = ["rakka contributors"]

[workspace.dependencies]
# Async / runtime
tokio = { version = "1.39", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Concurrency primitives
dashmap = "6"
parking_lot = "0.12"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
flume = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bytes = "1"

# Protobuf (remote)
prost = "0.13"
prost-build = "0.13"

# Config
config = { version = "0.14", default-features = false, features = ["toml", "json", "yaml"] }
toml = "0.8"

# Error / utility
thiserror = "1"
anyhow = "1"
once_cell = "1"

# Testing
proptest = "1"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

# Macros
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

# Python bindings
pyo3 = { version = "0.22", default-features = false }
pyo3-async-runtimes = { version = "0.22", default-features = false, features = ["tokio-runtime"] }

# UUID / time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Persistence drivers (used by provider crates; kept here so versions stay in sync)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "any", "chrono", "uuid"] }
fred = { version = "10", default-features = false, features = ["i-std", "transactions"] }
mongodb = { version = "3" }
scylla = { version = "1" }
aws-config = { version = "1" }
aws-sdk-dynamodb = { version = "1" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
url = "2"

# HTTP / web (rakka-dashboard)
axum = { version = "0.7", default-features = false, features = ["json", "ws", "http1", "tokio", "query", "matched-path"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.5", default-features = false, features = ["cors", "trace", "fs"] }
rust-embed = { version = "8" }
clap = { version = "4", features = ["derive"] }

# Internal
rakka-core = { path = "crates/rakka-core", version = "0.2.0" }
rakka-config = { path = "crates/rakka-config", version = "0.2.0" }
rakka-macros = { path = "crates/rakka-macros", version = "0.2.0" }
rakka-testkit = { path = "crates/rakka-testkit", version = "0.2.0" }
rakka-remote = { path = "crates/rakka-remote", version = "0.2.0" }
rakka-cluster = { path = "crates/rakka-cluster", version = "0.2.0" }
rakka-cluster-tools = { path = "crates/rakka-cluster-tools", version = "0.2.0" }
rakka-cluster-sharding = { path = "crates/rakka-cluster-sharding", version = "0.2.0" }
rakka-cluster-metrics = { path = "crates/rakka-cluster-metrics", version = "0.2.0" }
rakka-distributed-data = { path = "crates/rakka-distributed-data", version = "0.2.0" }
rakka-persistence = { path = "crates/rakka-persistence", version = "0.2.0" }
rakka-persistence-query = { path = "crates/rakka-persistence-query", version = "0.2.0" }
rakka-persistence-query-inmemory = { path = "crates/rakka-persistence-query-inmemory", version = "0.2.0" }
rakka-persistence-tck = { path = "crates/rakka-persistence-tck", version = "0.2.0" }
rakka-persistence-sql = { path = "crates/rakka-persistence-sql", version = "0.2.0" }
rakka-persistence-redis = { path = "crates/rakka-persistence-redis", version = "0.2.0" }
rakka-persistence-mongodb = { path = "crates/rakka-persistence-mongodb", version = "0.2.0" }
rakka-persistence-cassandra = { path = "crates/rakka-persistence-cassandra", version = "0.2.0" }
rakka-persistence-aws = { path = "crates/rakka-persistence-aws", version = "0.2.0" }
rakka-persistence-azure = { path = "crates/rakka-persistence-azure", version = "0.2.0" }
rakka-streams = { path = "crates/rakka-streams", version = "0.2.0" }
rakka-telemetry = { path = "crates/rakka-telemetry", version = "0.2.0" }
rakka-dashboard = { path = "crates/rakka-dashboard", version = "0.2.0" }
rakka-coordination = { path = "crates/rakka-coordination", version = "0.2.0" }
rakka-discovery = { path = "crates/rakka-discovery", version = "0.2.0" }
rakka-di = { path = "crates/rakka-di", version = "0.2.0" }
rakka-hosting = { path = "crates/rakka-hosting", version = "0.2.0" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"

# Phase 0 lint baseline. See docs/idiomatic-rust.md (P-4).
#
# `todo`/`unimplemented` are denied workspace-wide because the audit
# found 0 sites; any regression breaks CI immediately.
#
# `unwrap_used`/`expect_used`/`panic` (and `print_stdout`/
# `print_stderr`/`dbg_macro` in library crates) are NOT promoted to
# `warn` here — the existing CI gate runs `cargo clippy ... -D
# warnings` and the audit found pre-existing sites that would break
# it. Instead, the per-crate counts are tracked by `cargo xtask
# audit` against `docs/reports/audit-2026-04.json`; CI runs
# `cargo xtask audit --check` and fails on regression. Phases that
# touch a given crate ratchet that crate's lints up to `warn`/`deny`
# once the corresponding sites are cleaned up (see Phase 13).
[workspace.lints.clippy]
todo                 = "deny"
unimplemented        = "deny"
