[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rakka"
version = "0.1.0"
description = "Python bindings for the rakka actor framework (Akka.NET port in Rust)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "rakka contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Topic :: System :: Distributed Computing",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "msgpack>=1.0"]
msgpack = ["msgpack>=1.0"]

[tool.maturin]
manifest-path = "crates/py-bindings/pycore/Cargo.toml"
module-name = "rakka._native"
python-source = "python"
features = ["pyo3/extension-module"]
strip = true

[tool.pytest.ini_options]
testpaths = ["python/tests"]
asyncio_mode = "auto"
