[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rakka"
version = "0.2.2"
description = "Native Rust actor runtime with Python bindings — supervised concurrency from one core to a cluster."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "rakka contributors" }]
keywords = ["actor", "concurrency", "distributed", "async", "supervisor", "rust"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/rustakka/rakka"
Documentation = "https://rustakka.github.io/rakka/"
Repository = "https://github.com/rustakka/rakka"
Issues = "https://github.com/rustakka/rakka/issues"
Changelog = "https://github.com/rustakka/rakka/releases"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "msgpack>=1.0"]
msgpack = ["msgpack>=1.0"]

[tool.maturin]
manifest-path = "crates/py-bindings/pycore/Cargo.toml"
module-name = "rakka._native"
python-source = "python"
features = ["pyo3/extension-module"]
strip = true

[tool.pytest.ini_options]
testpaths = ["python/tests"]
asyncio_mode = "auto"
