[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "atomr"
version = "0.4.2"
description = "Native Rust actor runtime with Python bindings — supervised concurrency from one core to a cluster."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "atomr contributors" }]
keywords = ["actor", "concurrency", "distributed", "async", "supervisor", "rust"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/rustakka/atomr"
Documentation = "https://rustakka.github.io/atomr/"
Repository = "https://github.com/rustakka/atomr"
Issues = "https://github.com/rustakka/atomr/issues"
Changelog = "https://github.com/rustakka/atomr/releases"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "msgpack>=1.0"]
msgpack = ["msgpack>=1.0"]

[tool.maturin]
manifest-path = "crates/py-bindings/pycore/Cargo.toml"
module-name = "atomr._native"
python-source = "python"
features = ["pyo3/extension-module"]
strip = true
# Maturin auto-emits `License-File: LICENSE` in the package metadata
# whenever a LICENSE exists next to pyproject.toml. PyPI strictly
# validates that any declared License-File is physically present in
# the distribution, so the workspace-root LICENSE must be packed into
# the sdist + wheel. Without this, `twine upload` of the sdist fails
# with `400 License-File LICENSE does not exist in distribution file`.
include = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
asyncio_mode = "auto"
