[package]
name = "atomr-cluster-metrics"
description = "Adaptive load balancing using cluster-wide metrics for atomr."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/atomr-cluster-metrics"
keywords = ["actor", "cluster", "metrics", "load-balancing"]
categories = ["network-programming", "concurrency"]

[dependencies]
atomr-core = { workspace = true }
atomr-cluster = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
sysinfo = { version = "0.32", optional = true }

[features]
default = []
sysinfo-probe = ["dep:sysinfo"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
