[package]
name = "atomr-cluster-sharding"
description = "Sharded entities for atomr — allocation strategies, rebalance, three-phase handoff, remember-entities."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/atomr-cluster-sharding"
keywords = ["actor", "cluster", "sharding", "distributed"]
categories = ["network-programming", "concurrency"]

[dependencies]
atomr-core = { workspace = true }
atomr-cluster = { workspace = true }
atomr-persistence = { workspace = true }
atomr-distributed-data = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
