[package]
name = "atomr-cluster-tools"
description = "Distributed pub/sub, cluster singleton, and cluster client patterns for atomr."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/atomr-cluster-tools"
keywords = ["actor", "cluster", "pubsub", "singleton"]
categories = ["network-programming", "concurrency"]

[dependencies]
atomr-core = { workspace = true }
atomr-cluster = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
atomr-testkit = { workspace = true }
atomr-config = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
