[package]
name = "atomr-cluster"
description = "Membership, gossip, reachability, vector clocks, and split-brain resolvers for atomr clusters."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/atomr-cluster"
keywords = ["actor", "cluster", "distributed", "gossip"]
categories = ["network-programming", "concurrency"]

[dependencies]
atomr-core = { workspace = true }
atomr-remote = { workspace = true }
atomr-config = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
atomr-testkit = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
