[package]
name = "atomr-dashboard"
description = "Live web UI over a running atomr system — REST + WebSocket + embedded React SPA, Prometheus / OTLP exporters."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/atomr-dashboard"
keywords = ["actor", "dashboard", "observability", "metrics"]
categories = ["development-tools::profiling", "web-programming"]

[dependencies]
atomr-core = { workspace = true }
atomr-telemetry = { workspace = true, features = ["cluster", "persistence", "remote", "streams", "ddata", "sharding", "cluster-metrics"] }
atomr-config = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }

rust-embed = { workspace = true, optional = true, features = ["mime-guess"] }
clap = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
chrono = { workspace = true }

[features]
default = []
embed-ui = ["dep:rust-embed"]
metrics-prometheus = ["atomr-telemetry/prometheus"]
metrics-otel = ["atomr-telemetry/otel"]
metrics-otel-grpc = ["metrics-otel", "atomr-telemetry/otel-otlp-grpc"]
metrics-otel-http = ["metrics-otel", "atomr-telemetry/otel-otlp-http"]
metrics-otel-stdout = ["metrics-otel", "atomr-telemetry/otel-stdout"]
bin = ["dep:clap", "dep:anyhow", "dep:tracing-subscriber"]
aggregator = ["dep:reqwest"]

[[bin]]
name = "atomr-dashboard"
path = "src/bin/atomr-dashboard.rs"
required-features = ["bin"]

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tower = { workspace = true, features = ["util"] }
tokio-tungstenite = "0.24"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
