[package]
name = "atomr-di"
description = "Dependency-injection container for atomr."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/atomr-di"
keywords = ["actor", "dependency-injection", "ioc"]
categories = ["rust-patterns", "concurrency"]

[dependencies]
atomr-core = { workspace = true }
parking_lot = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
