[package]
name = "atomr-discovery"
description = "Pluggable service-discovery interface for atomr."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/atomr-discovery"
keywords = ["actor", "service-discovery", "distributed"]
categories = ["network-programming", "concurrency"]

[dependencies]
atomr-core = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
