[package]
name = "atomr-distributed-data-lmdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "redb-backed DurableStore for atomr distributed-data."

[dependencies]
atomr-distributed-data = { path = "../atomr-distributed-data", version = "0.4.0" }
redb = "2.1"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
