[package]
name = "atomr-distributed-data"
description = "Convergent replicated data types (CRDTs) over a atomr cluster — counters, sets, maps, registers, replicator."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/atomr-distributed-data"
keywords = ["actor", "crdt", "distributed", "replication"]
categories = ["data-structures", "concurrency"]

[dependencies]
atomr-core = { workspace = true }
atomr-cluster = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
