[package]
name = "atomr-macros"
description = "Procedural macros for atomr — `#[derive(Actor)]`, `props!`, `#[derive(Receive)]`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/atomr-macros"
keywords = ["actor", "macros", "derive"]
categories = ["concurrency", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
atomr-core = { workspace = true }
atomr-config = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
