[package]
name = "atomr-patterns"
description = "DDD/CQRS pattern library for atomr — aggregates, readers, projections, sagas, outbox, ACL."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/atomr-patterns"
readme = "../../README.md"
keywords = ["actor", "cqrs", "ddd", "event-sourcing", "saga"]
categories = ["concurrency", "database"]

[dependencies]
atomr-core              = { workspace = true }
atomr-persistence       = { workspace = true }
atomr-persistence-query = { workspace = true }
atomr-streams           = { workspace = true }
atomr-cluster-tools     = { workspace = true, optional = true }
async-trait             = { workspace = true }
futures                 = { workspace = true }
tokio                   = { workspace = true }
thiserror               = { workspace = true }
tracing                 = { workspace = true }
parking_lot             = { workspace = true }

[dev-dependencies]
atomr-persistence-query-inmemory = { workspace = true }
atomr-config                     = { workspace = true }

[features]
default = []
bus-cluster = ["dep:atomr-cluster-tools"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
