[package]
name = "atomr-persistence-aws"
description = "AWS DynamoDB journal and snapshot store for atomr — single-table design with conditional writes."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/atomr-persistence-aws"
keywords = ["actor", "event-sourcing", "dynamodb", "aws"]
categories = ["database", "concurrency"]

[features]
default = []
integration = []

[dependencies]
atomr-persistence = { workspace = true }
atomr-persistence-query = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }

[dev-dependencies]
atomr-persistence-tck = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
