[package]
name = "atomr-persistence-cassandra"
description = "Cassandra and ScyllaDB journal and snapshot store for atomr — partitioned tables, prepared-statement replay."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/atomr-persistence-cassandra"
keywords = ["actor", "event-sourcing", "cassandra", "scylla"]
categories = ["database", "concurrency"]

[features]
default = []
integration = []

[dependencies]
atomr-persistence = { workspace = true }
atomr-persistence-query = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
scylla = { workspace = true }

[dev-dependencies]
atomr-persistence-tck = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
